--- a/project_workflows/Smith_etal_2022.Rmd
+++ b/project_workflows/Smith_etal_2022.Rmd
@@ -54,9 +54,42 @@ theme_niwot <- function(){
                                            size = 2, linetype = "blank"))
 }
 
+## Output table
+getAttributeField <- function (x, field, attrsep = ";") {
+     s = strsplit(x, split = attrsep, fixed = TRUE)
+     sapply(s, function(atts) {
+         a = strsplit(atts, split = "=", fixed = TRUE)
+         m = match(field, sapply(a, "[", 1))
+         if (!is.na(m)) {
+             rv = a[[m]][2]
+         }
+         else {
+             rv = as.character(NA)
+         }
+         return(rv)
+     })
+}
+
+gffRead <- function(gffFile, nrows = -1) {
+     gff = read.table(gffFile, sep="\t", as.is=TRUE, quote="",
+     header=FALSE, comment.char="#", nrows = nrows,
+     colClasses=c("character", "character", "character", "integer", "integer",
+     "character", "character", "character", "character"))
+     colnames(gff) = c("seqname", "source", "feature", "start", "end",
+             "score", "strand", "frame", "attributes")
+     stopifnot(!any(is.na(gff$start)), !any(is.na(gff$end)))
+     return(gff)
+}
+
 ## directories
 quant <- "quant_files"
 anno_dir <- "/home/diepg/ref_seqs/TAIR10"
+anno <- gffRead(file.path(anno_dir, "Arabidopsis_thaliana.TAIR10.51.gff3")) %>%
+  subset(feature == "gene") %>% 
+  mutate(ID = getAttributeField(attributes, "gene_id")) %>%
+  mutate(name = getAttributeField(attributes, "Name")) %>%
+  mutate(description = getAttributeField(attributes, "description")) %>%
+  select(ID, name, description)
 
 ## metadata and normalize timepoints from time of infiltration
 metatable <- read_csv("exp_setup.csv") %>%
@@ -145,31 +178,6 @@ plotRLE(cpm(normCounts(set1)), outline=FALSE, main = "RUVr",
 	ylim=c(-4, 4), col=clrs[metatable$Treatment])
 #plotRLE(cpm(normCounts(set2)), outline=FALSE, main = "RUVs", 
 #	ylim=c(-4, 4), col=clrs[metatable$Treatment])
-dev.off()
-
-pdf("PCAplots.pdf")
-pcomp1 <- prcomp(t(as.matrix(gene_tpm[keep,])), scale. = T)
-pcomp2 <- prcomp(t(cpm(normCounts(set1))), scale. = T)
-
-fviz_pca_ind(pcomp1, repel = T, label="none", title="TPM",
-        habillage=metatable$Experiment, 
-	xlim=c(-200,200), ylim=c(-200,200),
-        addEllipses=TRUE, ellipse.type = "confidence")
-
-fviz_pca_ind(pcomp2, repel = T, label="none", title = "RUVr",
-        habillage=pData(set1)$Experiment, addEllipses=TRUE,
-	xlim=c(-200,200), ylim=c(-200,200),
-        ellipse.type = "confidence")
-
-fviz_pca_ind(pcomp1, repel = T, label="none", title="TPM",
-        habillage=interaction(metatable$Treatment,metatable$Condition),
-	xlim=c(-200,200), ylim=c(-200,200),
-        addEllipses=TRUE, ellipse.type = "confidence")
-
-fviz_pca_ind(pcomp2, repel = T, label="none", title = "RUVr",
-        habillage=interaction(pData(set1)$Treatment, pData(set1)$Condition),
-	xlim=c(-200,200), ylim=c(-200,200),
-        addEllipses=TRUE, ellipse.type = "confidence")
 dev.off()
 
 ## Extract corrected CPM values
@@ -267,7 +275,7 @@ normData <- select(d2, -frac_cpm, -test, -decay_fac) %>%
 	subset(!(ID %in% gene_filter$ID)) %>%
 	mutate(log_frac_cpm = log(decaynorm_frac_cpm + 0.01))
 
-## apply decay normalization and filter any genes with a fold-increase after T10 (NL only)
+## decay normalization and filter genes with a fold-increase after T10 (NL only)
 d3 <- subset(d1, Condition == "NL") %>%                                                                   mutate(decay_fac = normFactors_mean$decay_fac[match(interaction(Timepoint,Condition,Experiment), interaction(normFactors_mean$Timepoint, normFactors_mean$Condition, normFactors_mean$Experiment))]) %>%
         mutate(decaynorm_frac_cpm = frac_cpm/decay_fac) %>%
         mutate(test = ifelse(decaynorm_frac_cpm >= 1.5 & Timepoint != 10, yes = 1, no = 0)) %>%
@@ -385,16 +393,60 @@ for(i in colnames(my.contrasts)){
 dge <- mutate(dge, DGE=ifelse(logFC > 0 & FDR < 0.05, yes = "Up-regulated", no=
                       ifelse(logFC < 0 & FDR < 0.05, yes='Down-regulated', no="Non-DGE")))
 
+dge_out <- dge %>% subset(DGE != "Non-DGE") %>% left_join(anno, by=c("ID"))
+write_csv(dge_out, "cordycepin_dge.csv")
+
+
+pdf("PCAplots_cordycepin_RNA.pdf")
+#pcomp1 <- prcomp(t(as.matrix(gene_tpm[keep,])), center = T, scale. = T)
+#pcomp2 <- prcomp(t(cpm(normCounts(set1))), center=T, scale. = T)
+
+#fviz_pca_ind(pcomp1, repel = T, label="none", title="TPM",
+#        habillage=interaction(metatable$Treatment,metatable$Condition),
+#       xlim=c(-200,200), ylim=c(-200,200),
+#        addEllipses=TRUE, ellipse.type = "confidence")
+
+#fviz_pca_ind(pcomp2, repel = T, label="none",
+#        habillage=interaction(pData(set1)$Treatment,pData(set1)$Condition),
+#        pointsize=1.5, invisible="quali", addEllipses=F, ellipse.type = "confidence")
+
+#my_grps1 <- pData(set1) %>% subset(Treatment == "Cordycepin") %>%
+#        mutate(group = paste(Condition, Timepoint, sep='_')) %>%
+#        dplyr::select(Condition, Timepoint, Experiment) %>%
+#        mutate(Experiment = as.factor(Experiment))
+
+#cor_matrix <- cor(test1, method="pearson")
+#pheatmap(cor_matrix, annotation_col = my_grps1, scale="none", cluster_cols=T,
+#        cluster_rows=T, show_colnames=F, show_rownames=F, fontsize=6)
+
+mds <- plotMDS(y2, ndim=3, plot=F, gene.selection = "pairwise")
+
+mds_df <- data.frame(Sample = colnames(mds$distance.matrix.squared), 
+	x1 = as.numeric(mds$x), 
+	y1 = as.numeric(mds$y)) %>%
+	left_join(metatable, by="Sample") %>%
+	mutate(Timepoint = as.factor(paste(Timepoint)))
+
+ggplot(data = mds_df) + 
+	aes(x=x1, y=y1, colour=Condition, shape=Treatment) +
+	geom_point() +
+	facet_wrap(~Timepoint) + 
+	scale_x_continuous(name = "Dim1") +
+	scale_y_continuous(name = "Dim2") +
+	theme_niwot()
+
+dev.off()
+
+
 pdf("DGE_testing.pdf")
-ggplot(data = dge) + aes(x=logFC, y=-log10(FDR), group=contrast, colour=DGE) +
-  geom_jitter(size=0.8) + 
-  theme_niwot() +
-  geom_hline(yintercept = -log10(0.05), linetype='dashed', col='salmon', alpha=0.5) +
-  geom_vline(xintercept = 0, linetype='dashed', col='darkgrey', alpha=0.5) +
-  facet_wrap(~contrast) +
-  scale_x_continuous(name = "log2 fold-change", limits = c(-8,8)) +
-  scale_y_continuous(name = "-log10 p-value") +
-  scale_colour_manual(values = c('Down-regulated'="royalblue","Non-DGE"="lightgrey","Up-regulated"="khaki1"))
+
+#ggplot(data = dge) + aes(x=logFC, y=-liog10(FDR), group=contrast, colour=DGE) +
+#  geom_jitter(size=0.8) + theme_niwot() + facet_wrap(~contrast) +
+#  geom_hline(yintercept = -log10(0.05), linetype='dashed', col='salmon', alpha=0.5) +
+#  geom_vline(xintercept = 0, linetype='dashed', col='darkgrey', alpha=0.5) +
+#  scale_x_continuous(name = "log2 fold-change", limits = c(-8,8)) +
+#  scale_y_continuous(name = "-log10 p-value") +
+#  scale_colour_manual(values = c('Down-regulated'="royalblue","Non-DGE"="lightgrey","Up-regulated"="khaki1"))
 
 ggplot(data=subset(dge, DGE != "Non-DGE")) + aes(x=logCPM, y=logFC, group=contrast, colour=DGE) +
   geom_jitter(size=0.8) +
@@ -504,7 +556,7 @@ p1 <- ggplot(out_all) + aes(x=k, colour=Condition, fill=Condition) +
         scale_x_continuous(name = "k-decay")
 
 p2 <- ggplot(out_all) + aes(x=rsq, y=halflife, color=Condition) +
-        geom_point() +
+        ngeom_point() +
         theme_niwot() +
 	#facet_wrap(~Condition) +
 	#coord_cartesian(xlim=c(0,1)) +
@@ -568,7 +620,14 @@ pheatmap(as.matrix(heatmap_input),
 ## decay profile of sample genes
 ##############################
 
-sample_ids <- sample(unique(out$geneID), size = 8, replace = FALSE)
+test2 <- select(rrgd, locus_identifier) %>%
+	mutate(r_sq_nl = out_NL$rsq[match(locus_identifier, out_NL$geneID)]) %>%
+	na.omit() %>%
+	arrange(r_sq_nl)
+
+# sample_ids <- sample(unique(subset(out_all, rsq>0.8)$geneID), size = 3, replace = FALSE)
+# sample_ids <- c("AT1G74310","AT2G47180","AT3G25230")
+sample_ids <- test2$locus_identifier[96:99]
 
 pdf("sample_model_fit.pdf")
 test <- subset(normData, ID %in% sample_ids ) %>%
@@ -576,16 +635,16 @@ test <- subset(normData, ID %in% sample_ids ) %>%
         summarise(relative_abundance = mean(decaynorm_frac_cpm),
                 reps = sum(!(is.na(decaynorm_frac_cpm))),
                 SE = sd(decaynorm_frac_cpm)/sqrt(reps)) %>%
-	mutate(rsq = out$rsq[match(interaction(ID,Condition), interaction(out$geneID,out$Condition))]) %>% 
-	mutate(halflife=out$halflife[match(interaction(ID,Condition), interaction(out$geneID,out$Condition))])
+	mutate(rsq = out2$rsq[match(interaction(ID,Condition), interaction(out2$geneID,out2$Condition))]) %>% 
+	mutate(halflife=out2$halflife[match(interaction(ID,Condition), interaction(out2$geneID,out2$Condition))])
 
 ggplot(data=test, aes(x = Timepoint, y = relative_abundance, col = Condition)) +
 	geom_line(linetype='dashed', size=0.5, alpha=0.4)+
         geom_point(size=0.6) +
-        geom_errorbar(aes(ymin=relative_abundance-SE, ymax=relative_abundance+SE), width=.8) +
+        geom_errorbar(aes(ymin=relative_abundance-SE, ymax=relative_abundance+SE),width=.8)+
         facet_grid(Condition~ID) +
-        coord_cartesian(ylim= c(0,1.4)) +
-        scale_y_continuous(name = "Relative abundance", breaks=c(0,0.5,1)) +
+        coord_cartesian(ylim= c(0,1.2)) +
+        scale_y_continuous(name = "Normalized relative abundance", breaks=c(0,0.5,1)) +
         scale_x_continuous(name = "Time post-infiltration (min)", breaks=c(10,20,30,40)) +
         theme_niwot() +
 	geom_hline(yintercept = 0.5, linetype='dashed', col='grey') +
@@ -594,18 +653,18 @@ ggplot(data=test, aes(x = Timepoint, y = relative_abundance, col = Condition)) +
 	geom_text(x=20, y=0.1, label=paste0("t1/2=",round(test$halflife,2)), size=1.5)
 
 test <- subset(normData, ID %in% sample_ids ) %>%
-	mutate(rsq = out$rsq[match(interaction(ID,Condition), interaction(out$geneID,out$Condition))]) %>% 
-	mutate(halflife=out$halflife[match(interaction(ID,Condition), interaction(out$geneID,out$Condition))])
+	mutate(rsq = out2$rsq[match(interaction(ID,Condition), interaction(out2$geneID,out2$Condition))]) %>% 
+	mutate(halflife=out2$halflife[match(interaction(ID,Condition), interaction(out2$geneID,out2$Condition))])
 
-ggplot(data=test, aes(x = Timepoint, y = log_frac_cpm, col = Condition)) +
+ggplot(data=test, aes(x = Timepoint, y = decaynorm_frac_cpm, col = Condition)) +
         geom_point(size=0.4, alpha=0.4) +
-	geom_smooth(method="lm", formula = y ~ x, se=T, alpha = 0.5) +
+	geom_smooth(method="lm", formula = y ~ x, se=F, alpha = 0.8, linetype='dashed') +
         facet_grid(Condition~ID) +
-        scale_y_continuous(name = "ln[fold-change + 0.01]") +
+        scale_y_continuous(name = "normalized relative abundance") +
         scale_x_continuous(name = "Time post-infiltration (min)", breaks=c(10,20,30,40)) +
         theme_niwot() +
         theme(legend.position = "bottom") +
-	geom_hline(yintercept = log(0.5), linetype='dashed', col='grey') +
+	geom_hline(yintercept = 0.5, linetype='dashed', col='grey') +
         geom_text(x=30, y=0.5, label=paste0("R2=",round(test$rsq,2)), size=1.5) +
         geom_text(x=30, y=0.8, label=paste0("t1/2=",round(test$halflife,2)), size=1.5)
 dev.off()
@@ -666,6 +725,19 @@ w1 <- rbind(b1,b2,b3,b4,b5) %>%
 	mutate(geneID = as.character(geneID)) %>%
 	mutate(log_halflife = log2(halflife + 0.01))
 
+pdf("scatterplot_matrix.pdf")
+
+select(w1,-halflife ) %>% spread(Condition, log_halflife) %>% gather(dataset, halflife, -geneID, -Smith) %>%
+	ggplot(.) + aes(x=Smith, y=halflife) +
+		geom_point() +
+		theme_niwot()+
+		scale_x_continuous(name="log2 halflife", limits=c(0,15)) +
+		scale_y_continuous(name="log2 halflife", limits=c(0,15)) +
+		facet_wrap(~dataset) +
+		geom_abline(col='salmon', linetype='dashed')
+
+dev.off()
+
 test <- dabest(.data = w1, x = Condition, 
 	y = halflife, 
 	#y = log_halflife,
@@ -720,8 +792,8 @@ dev.off()
 test <- dabest(.data = out_all, 
 	x = Condition,
         y = halflife,
-        #idx = c("NL", "EL", "Rec"),
-        idx = c("NL","EL"),
+        idx = c("NL", "Rec"),
+        #idx = c("NL","EL"),
 	paired=TRUE, id.col = "geneID")
 
 test1 <- cliffs_delta(test, reps=10000)
@@ -755,7 +827,7 @@ a <- select(out_all, geneID, Condition, halflife) %>%
         mutate(diff = a1$diff[match(group, a1$test)]) %>%
         mutate(x = halflife - NL) %>%
         mutate(test = ifelse(x < diff, yes = 1, no = 0)) %>%
-	subset(group == "EL")
+	subset(group == "Rec")
 
 a_venn <- select(a, geneID, group, test) %>% spread(group, test)
 
@@ -829,14 +901,14 @@ p2 <- ggplot(data=half_ratio) + aes(x=logcpm_HL, y=t_ratio_HL) +
         scale_y_continuous(name = "mRNA half-life ratio") +
         scale_x_continuous(name = "mRNA abundance")
 
-p3 <- ggplot(data=half_ratio_rrgd) + aes(x=t_ratio, y=fold_change) +
-	facet_wrap(~condition) +
+p3 <- ggplot() + 
        	theme_niwot() +
-        geom_point(col='salmon') +
+        geom_point(data=subset(half_ratio, loci == "non"), colour='black', alpha=0.6, mapping=aes(x=t_ratio_Rec, y=fold_change_Rec)) +
+	geom_point(data=subset(half_ratio, loci == "RRGD"), colour='salmon', alpha=1.6,  mapping=aes(x=t_ratio_Rec, y=fold_change_Rec)) +
+	geom_smooth(data = half_ratio, mapping = aes(x=t_ratio_Rec, y=fold_change_Rec), method='lm', formula = y~x) +
         scale_y_continuous(name = "mRNA relative abundance", trans = "log10") +
        	scale_x_continuous(name = "mRNA half-life ratio", trans = "log10") +
-        geom_vline(xintercept=1, col='dodgerblue', linetype='dashed')+
-	geom_hline(yintercept=1, col='dodgerblue', linetype='dashed')
+        geom_vline(xintercept=1, col = 'red', linetype = 'dashed')
 
 p2
 
@@ -849,21 +921,80 @@ dev.off()
 summary(lm(formula = fold_change_HL ~ t_ratio_HL, data = half_ratio))
 cor(half_ratio$fold_change_HL, half_ratio$t_ratio_HL)
 
-summary(lm(formula = fold_change_Rec ~ t_ratio_REC, data = half_ratio_rrgd))
-cor(half_ratio_rrgd$fold_change_Rec, half_ratio_rrgd$t_ratio_REC)
+summary(lm(formula = fold_change_Rec ~ t_ratio_Rec, data = half_ratio))
+cor(half_ratio$fold_change_Rec, half_ratio$t_ratio_Rec)
+
+
+##########################
+## PCA polysome-seq
+#######################
+
+meta_poly <- dir("polysome_rna/") %>% tibble() %>%
+        mutate(file_contents = map(., ~read_csv(file.path("polysome_rna", .)))) %>%
+        unnest(cols=c(file_contents)) %>%
+        gather(sample, rpkm, -., -ID, -Length, na.rm = T) %>%
+        mutate(type = sapply(strsplit(sample, "_"), function(l) l[3])) %>%
+        mutate(time = sapply(strsplit(., "_"), function(l) l[3])) %>%
+        mutate(time = paste0('t',time)) %>%
+        mutate(sample = sapply(strsplit(sample, "_"), function(l) paste0(l[1],l[2])))
+
+total_countFiles <- dir("../Exp566/total_counts/")
+lbls <- sapply(strsplit(total_countFiles, "_"), function(l) l[2])
+grps <- paste0("Sample",lbls)
+
+v1 <- readDGE(total_countFiles, columns = c(1,7), 
+	labels=lbls, group=grps,
+	path="../Exp566/total_counts/", skip=1)
+v1$samples$time <- meta_poly$time[match(v1$samples$group, meta_poly$sample)]
+time <- v1$samples$time
+design <- model.matrix(~0 + time)
+
+keep <- rowSums(cpm(v1) > 1) > 3
+v1 <- v1[keep, ]
+v1$samples$lib.size <- colSums(v1$counts)
+v1 <- calcNormFactors(v1, method = "TMM")
+
+poly_countFiles <- dir("../Exp566/poly_counts/")
+lbls <- sapply(strsplit(poly_countFiles, "_"), function(l) l[2])
+
+v2 <- readDGE(total_countFiles, columns = c(1,7),
+        labels=lbls, group=lbls,
+        path="../Exp566/total_counts/", skip=1)
+v2$samples$time <- meta_poly$time[match(v2$samples$group, meta_poly$sample)]
+time <- v2$samples$time
+design <- model.matrix(~0 + time)
+
+keep <- rowSums(cpm(v2) > 1) > 3
+v2 <- v2[keep, ]
+v2$samples$lib.size <- colSums(v2$counts)
+v2 <- calcNormFactors(v2, method = "TMM")
+
+pdf("PCAplots_polysomeRNA.pdf")
+mds <- plotMDS(v1, ndim=3, plot=F, gene.selection = "pairwise")
+
+mds_df <- data.frame(Sample = colnames(mds$distance.matrix.squared),
+        x1 = as.numeric(mds$x),
+        y1 = as.numeric(mds$y)) %>%
+        mutate(Sample = paste0("Sample",Sample)) %>%
+        mutate(time = meta_poly$time[match(Sample, meta_poly$sample)])
+
+ggplot(data = mds_df) +
+        aes(x=x1, y=y1, colour=time) +
+        geom_point() +
+        ggtitle("Total RNA") +
+	scale_x_continuous(name = "Dim1") +
+        scale_y_continuous(name = "Dim2") +
+        theme_niwot()
+
+
+
+dev.off()
 
 
 ##################
 ## mRNA half-life vs translation (polysome-RNA abundance and RPL)
 #################
-polyR <- dir("polysome_rna/") %>% tibble() %>% 
-	mutate(file_contents = map(., ~read_csv(file.path("polysome_rna", .)))) %>%
-	unnest(cols=c(file_contents)) %>%
-	gather(sample, rpkm, -., -ID, -Length, na.rm = T) %>%
-	mutate(type = sapply(strsplit(sample, "_"), function(l) l[3])) %>%
-	mutate(time = sapply(strsplit(., "_"), function(l) l[3])) %>%
-	mutate(time = paste0('t',time)) %>%
-	mutate(sample = sapply(strsplit(sample, "_"), function(l) paste0(l[1],l[2]))) %>%
+polyR <-meta_poly %>%
 	group_by(ID,type,time) %>% summarise(avg_rpkm = mean(rpkm)) %>%
 	subset(time == 't0' | time == 't30' | time == 't60' | time == 't90') %>%
 	spread(type, avg_rpkm) %>%
@@ -883,17 +1014,12 @@ polyR <- dir("polysome_rna/") %>% tibble() %>%
         mutate(loci = rrgd$rrgd_loci[match(ID, rrgd$locus_identifier)]) %>%
         mutate(loci = ifelse(is.na(loci) == T, yes="non", no="RRGD")) %>%
         mutate(loci = factor(loci, levels = c("non","RRGD"))) %>%
-	mutate(cat_30 = ifelse(logfc_30 >= log2(1.5), 'g1', 
-		ifelse(logfc_30 <= -log2(1.5), 'g2', 'g3'))) %>% 
-	mutate(cat_30 = ifelse(cat_30 != 'g3', cat_30, 
-		ifelse(log_half_HL>=log2(1.5),'g4', 
-			ifelse(log_half_HL <= -log2(1.5),'g5','g6')))) %>%
-	mutate(cat_60 = ifelse(logfc_60 >= log2(1.5), 'g1',                                                       ifelse(logfc_60 <= -log2(1.5), 'g2', 'g3'))) %>%
-        mutate(cat_60 = ifelse(cat_60 != 'g3', cat_60,
-                ifelse(log_half_HL>=log2(1.5),'g4',                                                                       ifelse(log_half_HL <= -log2(1.5),'g5','g6')))) %>%
-	mutate(cat_90 = ifelse(logfc_90 >= log2(1.5), 'g1',                                                       ifelse(logfc_90 <= -log2(1.5), 'g2', 'g3'))) %>%
-        mutate(cat_90 = ifelse(cat_90 != 'g3', cat_90,
-                ifelse(log_half_REC>=log2(1.5),'g4',                                                                       ifelse(log_half_REC <= -log2(1.5),'g5','g6'))))
+	mutate(cat_30 = ifelse(logfc_30 >= log2(1.5), 'g1', ifelse(logfc_30 <= -log2(1.5), 'g2', 'g3'))) %>% 
+	mutate(cat_30 = ifelse(cat_30 != 'g3', cat_30, ifelse(log_half_HL>=log2(1.5),'g4', ifelse(log_half_HL <= -log2(1.5),'g5','g6')))) %>%
+	mutate(cat_60 = ifelse(logfc_60 >= log2(1.5), 'g1', ifelse(logfc_60 <= -log2(1.5), 'g2', 'g3'))) %>%
+        mutate(cat_60 = ifelse(cat_60 != 'g3', cat_60, ifelse(log_half_HL>=log2(1.5),'g4',ifelse(log_half_HL <= -log2(1.5),'g5','g6')))) %>%
+	mutate(cat_90 = ifelse(logfc_90 >= log2(1.5), 'g1', ifelse(logfc_90 <= -log2(1.5), 'g2', 'g3'))) %>%
+        mutate(cat_90 = ifelse(cat_90 != 'g3', cat_90,ifelse(log_half_REC>=log2(1.5),'g4',ifelse(log_half_REC <= -log2(1.5),'g5','g6'))))
 
 pdf("rpl_vs_halflife.pdf", paper='a4')
 p1 <- ggplot(data=polyR) + aes(x=log_half_HL, y=logfc_30, col = cat_30) +
@@ -944,15 +1070,8 @@ test_rpl <- subset(polyR, cat_60 == "g1") %>%
 write_csv(test_rpl, "HL_60_RPLup.csv")
 
 #### collate Poly and total RPKM
-polyR_rpkm <- dir("polysome_rna/") %>% tibble() %>%
-        mutate(file_contents = map(., ~read_csv(file.path("polysome_rna", .)))) %>%
-        unnest(cols=c(file_contents)) %>%
-        gather(sample, rpkm, -., -ID, -Length, na.rm = T) %>%
-        mutate(type = sapply(strsplit(sample, "_"), function(l) l[3])) %>%
-        mutate(time = sapply(strsplit(., "_"), function(l) l[3])) %>%
-        mutate(time = paste0('t',time)) %>%
-        mutate(sample=sapply(strsplit(sample, "_"), function(l) paste0(l[1],l[2]))) %>%
-        group_by(ID,type,time) %>% summarise(avg_rpkm = mean(rpkm)) %>%
+poly_rpkm <- meta_poly %>%
+	group_by(ID,type,time) %>% summarise(avg_rpkm = mean(rpkm)) %>%
 	mutate(sample = paste(type, time, sep="_")) %>%
 	ungroup() %>% dplyr::select(-type, -time) %>%
         spread(sample, avg_rpkm)
